# complex-calc

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: main.h
include/core/: equation_solver.h  expression_parser.h
include/logic/functions/: cubic.h  linear.h  octic.h  quadratic.h  quartic.h  quintic.h  septic.h  sextic.h
include/logic/matrices/: matrix_addition.h  matrix_subtraction.h  matrix_utils.h
src/: algebra_solver.cpp  algebra_solver.h  main.cpp
src/core/: equation_solver.cpp  expression_parser.cpp
src/logic/functions/: cubic.cpp  linear.cpp  octic.cpp  quadratic.cpp  quartic.cpp  quintic.cpp  septic.cpp  sextic.cpp
src/logic/matrices/: matrix_addition.cpp  matrix_subtraction.cpp  matrix_utils.cpp
